* 2007-10-22 - thorben.betten@open-xchange.com

 - Bugfix #9820: Fixed folder move operation if IMAP server does not
   support ACLs

* 2007-10-19 - marcus.klein@open-xchange.com

 - Bugfix #9764: This issue is fixed with the fix for bug 9807.

* 2007-10-18 - martin.kauss@open-xchange.com

 - Fixed bug #9772. One argument in an object not found exception was
   missing. This has been fixed.

* 2007-10-18 - marcus.klein@open-xchange.com

 - Bugfix #9800: Remaining entries inside del table after context delete
 - Bugfix #9581: Delete of all user contacts during the delete user process
   was not working if an unbound contacts occured.
 - Bugfix #9807: Catching all exceptions now in AJAX super servlet to prevent
   closed AJP sockets.
 - Bugfix #9804: Added mapping for charset x-unknown to US-ASCII.
 - Bugfix #9822: Surrounded all TimerTasks with catch statement to prevent
   dying OXTimer if an exception occurs.

* 2007-10-17 - martin.kauss@open-xchange.com

 - Fixed bug #9808. An update task failed because of a wrong where
   clause. This has been fixed.

* 2007-10-16 - sebastian.kauss@open-xchange.com

 - Bugfix #9219: Reminder popups: Appointment reminder has wrong text
 - Bugfix #9416: Calendar: Concurrency issue with Reminder
                 confirmations - Bad error message
 - Bugfix #9492: Calendar: Reminder appears again and again
 - Bugfix #9514: Calendar: Reminder for recurring appointments shown
                 more than once for each occurence

* 2007-10-15 - martin.kauss@open-xchange.com

 - Fixed bug #6335. Some characters caused problems while building XML.
   Now we are throwing an error in the calendar if those characters are
   found.

* 2007-10-11 - thorben.betten@open-xchange.com

 - Bugfix #9756: Fallback implementation if UID EXPUNGE is not supported by
   IMAP server
 - Bugfix #9787: Checking right table when looking for user's default
   infostore folder on context deletion

* 2007-10-11 - martin.kauss@open-xchange.com
